<resources>
    <string name="app_name">Notification</string>
    <string name="name">Name</string>
    <string name="sing">Sign Up</string>
    <string name="name2">Name</string>
    <string name="email">E-mail</string>
    <string name="mail">Email</string>
    <string name="phone">Telephone</string>
    <string name="tel">Telephone</string>
    <string name="pswd">Password</string>
    <string name="repaswd">Re-type Password</string>
    <string name="but2">Register</string>
    <string name="but3">Cancel</string>
    <string name="channel_name">Sing Up</string>
    <string name="channel_description">Sing Up</string>
</resources>
